force-app/main/default/objects/slackv2__Subscription_Event__e/slackv2__Subscription_Event__e.object-meta.xml
<CustomObject>
    <label>Subscription Event</label>
    <pluralLabel>Subscription Events</pluralLabel>
</CustomObject>