force-app/main/default/objects/slackv2__Subscription_Event__e/fields/slackv2__Action__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Action__c</fullName>
    <label>Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>