force-app/main/default/objects/slackv2__Subscription_Event__e/fields/slackv2__Record_Data__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Record_Data__c</fullName>
    <label>Record Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>