force-app/main/default/objects/slackv2__Subscription_Event__e/fields/slackv2__Subscription_Id__c.field-meta.xml
<CustomField>
    <fullName>slackv2__Subscription_Id__c</fullName>
    <label>Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>